figured out how to add monocle without altering jre/lib/ext