@@ -10,7 +10,6 @@
 	<name>Kramer - auto layout in JavaFX</name>
 	<description>Automatic layout of structured hierarchical data in JavaFX</description>
 
-
 	<dependencies>
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
@@ -36,15 +35,50 @@
 			<artifactId>testfx-junit</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.testfx</groupId>
+			<artifactId>openjfx-monocle</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.1</version>
+				<executions>
+					<execution>
+						<id>copy</id>
+						<phase>generate-resources</phase>
+						<goals>
+							<goal>copy</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<artifactItems>
+						<artifactItem>
+							<groupId>org.testfx</groupId>
+							<artifactId>openjfx-monocle</artifactId>
+							<type>jar</type>
+							<overWrite>false</overWrite>
+							<outputDirectory>${basedir}/ext-dir</outputDirectory>
+							<destFileName>openjfx-monocle.jar</destFileName>
+						</artifactItem>
+					</artifactItems> 
+					<overWriteReleases>false</overWriteReleases>
+					<overWriteSnapshots>true</overWriteSnapshots>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.20</version>
 				<configuration>
-					<systemPropertyVariables>
+				    <forkCount>1</forkCount>
+				    <argLine>-Djava.ext.dirs=${java.home}/lib/ext:${basedir}/ext-dir</argLine>
+					<systemPropertyVariables> 
 						<testfx.robot>glass</testfx.robot>
 						<glass.platform>Monocle</glass.platform>
 						<monocle.platform>Headless</monocle.platform>
